--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Projects</div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            @projects.ListUserProjects().Count()
+                            @projects.ListUserProjects(userId).Count()
                         </div>
                     </div>
                     <div class="col-auto">
